--- a/barebones.info.yml
+++ b/barebones.info.yml
@@ -2,6 +2,7 @@ name: Bare Bones
 description: A skeleton theme for Drupal 8.
 type: theme
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: classy
 
 libraries:
