--- a/.npm/package.json
+++ b/.npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "barebones",
   "version": "1.0.0",
-  "description": "A skeleton theme for Drupal 8",
+  "description": "A skeleton theme for Drupal 9 and 10",
   "main": "gulpfile.js",
   "scripts": {
     "setup": "npm install"
